--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "express-validator": "^7.3.1",
     "joi": "^18.0.2"
   },
